--- a/app/views/investigations/index.html.erb
+++ b/app/views/investigations/index.html.erb
@@ -2,9 +2,14 @@
   <li class="active">HOME</li>
 </ol>
 
-
 <h2>案件一覧</h2>
-<p><%= link_to '新規登録', new_investigation_path, :class=>"btn btn-primary" %></p>
+<div class="row" style="margin-bottom: 10px;">
+  <div class="col-md-6"><%= link_to '新規登録', new_investigation_path, :class=>"btn btn-primary" %></div>
+  <div class="col-md-6">
+    <input type="text" id="keyword" size="50" placeholder="工事名で検索">
+    <%= link_to "検索", investigations_path, :id => "search", :class => "btn btn-default" %>
+  </div>
+</div>
 
 <table class="table table-striped table-hover">
   <tr>
@@ -13,7 +18,9 @@
     <th class="text-center">施工者</th>
     <th class="text-center">調査機関（事前）</th>
     <th class="text-center">調査機関（事中）</th>
-    <th class="text-center">調査機関（事後）</th>    
+    <th class="text-center">調査機関（事後）</th>
+    <th class="text-center">最終更新日</th>
+    <th class="text-center"><%= link_to "▲", investigations_path(order: "asc"), :class=>"" %></br><%= link_to "▼", investigations_path(order: "desc"), :class=>"" %></th>
     <th class="text-center"></th>
     <th class="text-center"></th>
   </tr>
@@ -26,9 +33,23 @@
         <td class="text-center align-middle"><%= investigation.investigator_pre_survey %></td>
         <td class="text-center align-middle"><%= investigation.investigator_ongoing_survey %></td>
         <td class="text-center align-middle"><%= investigation.investigator_after_survey %></td>
+        <td colspan="2" class="text-center align-middle"><%= investigation.updated_at.in_time_zone('Tokyo').strftime("%y/%m/%d") %></td>
         <td class="text-center align-middle"><%= link_to "詳細", investigation, :class=>"btn btn-default" %></td>
         <td class="text-center align-middle"><%= link_to "削除", investigation, :class=>"btn btn-danger", method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
       </tr>
   <% end %>
 </table>
 
+<script>
+$(function() {
+  $('#search').on('click', function() {
+    // 検索ワードの取得
+    var param = $("#keyword").val();
+    var base = $('#search').attr('href');
+        
+    // パラメーターの追加
+    $('#search').attr('href', base + '?keyword=' + param);
+    console.log($('#search').attr('href'));
+  });
+});
+</script>
