--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -503,7 +503,7 @@ $(document).ready(function() {
   else
   {
     //console.log("その他の端末です");
-    $(".shooting").addClass("nullify");
+#    $(".shooting").addClass("nullify");
   }
 });
 </script>
