--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -3,15 +3,6 @@
     <%= f.hidden_field :sonsyo_id, :value => @sonsyo.id %>
     <%= f.hidden_field :survey_type, :value => @damage.survey_type %>
     
-    <div class="row">
-      <div class="col-xs-6">
-        <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
-      </div>
-      <div class="col-xs-6">
-        <%= f.submit '登録', :class=>"btn btn-primary", :id=>"submit", data: { confirm: '登録してよろしいでしょうか？' } %>
-      </div>
-    </div>
-    
     <div class="row photosArea">
       <div class="col-xs-6">
         <% unless @preview_damage.image1? %>
@@ -23,6 +14,16 @@
       <div class="col-xs-6" id="sonsyo-<%= @sonsyo.id %>">
         <canvas id="liveview"></canvas>
         <input type="hidden" name="canvas_data">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-6" style="text-align: center;">
+        <%= f.submit '登録', :disabled=>"true", :class => "btn btn-primary", :id => "submit", data: { confirm: '登録してよろしいでしょうか？' } %>
+        <button type="button" id="return" class="btn btn-default">戻る</button>
+      </div>
+      <div class="col-xs-6">
+        <%= f.file_field :image1, :accept => 'image/*', :capture => 'environment' %>
       </div>
     </div>
     
@@ -47,7 +48,8 @@
           <%= f.check_box :kakusyo, {}, "true", "false" %><%= f.label :kakusyo, '各所' %>
         </div>
       </div>
-    
+      
+      <!--
       <div class="form-group" style="margin-top: 10px; padding: 10px;">
         矢印の向き：
         <label><input id="arrow_up" type="radio" checked="checked" name="direction">上</label>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -56,7 +58,8 @@
         <label><input id="arrow_left" type="radio" name="direction">左</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label><input id="arrow_clean" type="radio" name="direction">クリア</label>
       </div>
-  
+      -->
+      
       <div class="form-group">
         <p>面積：<%= f.text_field :width %>&nbsp;cm&nbsp;&nbsp;×&nbsp;&nbsp;<%= f.text_field :height %>&nbsp;cm</p>
         <p>幅：<%= f.text_field :wide %>&nbsp;mm</p>
@@ -94,6 +97,45 @@ var ctx = canvas.getContext('2d');
 var img = new Image();
 var reader = new FileReader();
 
+// 入力欄の有効(false)・無効化(true)操作
+function inputAreaDisable(flag) {
+  $("#damage_genkyo").prop("disabled", flag);  // 現況
+  $("#damage_sukima").prop("disabled", flag);  // 隙間
+  $("#damage_ware").prop("disabled", flag);  // 割れ
+  $("#damage_kake").prop("disabled", flag);  // 欠け
+  $("#damage_crack").prop("disabled", flag);  // クラック
+  
+  $("#damage_tile").prop("disabled", flag);  // タイル
+  $("#damage_kire").prop("disabled", flag);  // 切れ
+  $("#damage_uki").prop("disabled", flag);  // 浮き
+  $("#damage_suhon").prop("disabled", flag);  // 数本
+  $("#damage_chirigire").prop("disabled", flag);  // チリ切れ
+  
+  $("#damage_cross").prop("disabled", flag);  // クロス
+  $("#damage_meji").prop("disabled", flag);  // 目地
+  $("#damage_tategu").prop("disabled", flag);  // 建具
+  $("#damage_tasu").prop("disabled", flag);  // 多数
+  $("#damage_kakusyo").prop("disabled", flag);  // 各所
+  
+  $("#damage_width, #damage_height").prop("disabled", flag);  // 面積
+  $("#damage_wide").prop("disabled", flag);  // 幅
+  $("#damage_amimejyo, #damage_zencho, #damage_zenshu, #damage_length").prop("disabled", flag);  // 長さ
+  
+  $("#damage_comment").prop("disabled", flag); // コメント欄
+}
+
+// 戻るボタン
+document.querySelector("#return").addEventListener("click", () => {
+  // 登録ボタンを無効化
+  $("#submit").prop("disabled", true);
+  // 入力欄を有効化
+  inputAreaDisable(false);  
+  // ファイル選択を初期化  
+  $('#damage_image1').val('');
+  // liveview上の画像をクリア
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+});
+
 $('#damage_image1').on('change', function (e) {
   reader.onload = function (e) {
     img.src = e.target.result;
@@ -104,8 +146,9 @@ $('#damage_image1').on('change', function (e) {
       var imgH = img.height;
       // プレビュー画像の幅取得
       var previewImgW = $('.previewImg').width();
+      var previewImgH = $('.previewImg').height();
       // 拡縮率の計算
-      var rate = previewImgW / imgW;
+      var rate = previewImgH / imgH;
       
       // 画像ファイルの横幅に拡縮率を掛け、canvasのサイズにセット
       canvas.width = imgW * rate * 4;      // 高画質化のため、4倍に
@@ -115,11 +158,17 @@ $('#damage_image1').on('change', function (e) {
       // スタイルを設定
       canvas.style.width = String(imgW * rate) + "px";
       canvas.style.height = String(imgH * rate) + "px";
+      
+      // 登録ボタンを有効化
+      $("#submit").prop("disabled", false);
+      // 入力欄を無効化
+      inputAreaDisable(true);
     }
   }
   reader.readAsDataURL(e.target.files[0]);
 });
 
+/*
 $('#liveview').on('click', function(e){
   if(document.getElementById( "arrow_clean" ).checked) {
     // 初期化
@@ -186,6 +235,7 @@ $('#liveview').on('click', function(e){
     //console.log(ctx);
   }
 });
+*/
 
 function imagingAtCanvas() {
   // canvasの画像化
